--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ServerXRay
-version: '1.0-SNAPSHOT'
+version: '1.0'
 main: santoro.serverXRay.ServerXRay
 api-version: '1.21'
 author: lucas-santoro
